--- a/samples/IdentitySample.Mvc/IdentitySample.Mvc.csproj
+++ b/samples/IdentitySample.Mvc/IdentitySample.Mvc.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <Import Project="..\..\build\dependencies.props" />
+  <Import Project="..\..\build\common.props" />
 
   <PropertyGroup>
     <Description>Identity sample MVC application on ASP.NET Core</Description>
