Remove TUser from AddApplications

--- a/samples/IdentityOIDCWebApplicationSample/IdentityOIDCWebApplicationSample.csproj
+++ b/samples/IdentityOIDCWebApplicationSample/IdentityOIDCWebApplicationSample.csproj
@@ -7,6 +7,7 @@
     <MvcRazorCompileOnPublish>true</MvcRazorCompileOnPublish>
     <PackageTargetFallback>$(PackageTargetFallback);portable-net45+win8+wp8+wpa81;</PackageTargetFallback>
     <UserSecretsId>aspnet-IdentityWebApplicationSample-71B323EE-A696-4709-9EA5-C93EFCD9E6FB</UserSecretsId>
+    <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
