--- a/test/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest.csproj
+++ b/test/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest.csproj
@@ -7,36 +7,6 @@
     <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <!--
-      The functional tests act as the host application for all test websites. Since the CLI copies all reference
-      assembly dependencies in websites to their corresponding bin/{config}/refs folder we need to re-calculate
-      reference assemblies for this project so there's a corresponding refs folder in our output. Without it
-      our websites deps files will fail to find their assembly referenes.
-    -->
-
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-  </PropertyGroup>
-
-  <PropertyGroup Condition=" '$(TargetFramework)' != 'netcoreapp2.0' ">
-    <!-- Work around https://github.com/dotnet/sdk/issues/926. Align with bitness of the web site projects. -->
-    <PlatformTarget>x86</PlatformTarget>
-
-    <!--
-      Work around https://github.com/Microsoft/vstest/issues/428 aka https://github.com/aspnet/Mvc/issues/5873.
-      Create the appropriate binding redirects.
-    -->
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Content Include="build\xunit.runner.json">
-      <PackagePath>%(Identity)</PackagePath>
-      <Pack>true</Pack>
-    </Content>
-  </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\WebSites\Identity.ClientApplications.WebSite\Identity.ClientApplications.WebSite.csproj" />
   </ItemGroup>
@@ -48,14 +18,10 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(TestSdkVersion)" />
     <PackageReference Include="xunit" Version="$(XunitVersion)" />
     <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)" />
+    <PackageReference Include="AngleSharp" Version="0.9.9" />
   </ItemGroup>
 
-  <Target Name="CopyXunitRunner" AfterTargets="Build" Condition="'$(TargetFramework)'!=''">
-    <ItemGroup>
-      <XunitRunnerJson Include="$(MSBuildThisFileDirectory)build\xunit.runner.json" />
-    </ItemGroup>
-
-    <Copy SourceFiles="%(XunitRunnerJson.FullPath)" DestinationFolder="$(OutputPath)" Condition="Exists('%(XunitRunnerJson.FullPath)')" />
-  </Target>
-
+  <ItemGroup>
+    <None Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
 </Project>
