--- a/test/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest.csproj
+++ b/test/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest/Microsoft.AspNetCore.Identity.ClientApplications.FunctionalTest.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Testing" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Microsoft.Extensions.Logging.Testing" Version="$(AspNetCoreVersion)" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="$(AspNetCoreVersion)" />
