--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -7,24 +7,24 @@
   "dependencies": {
     "Microsoft.AspNetCore.Mvc": "1.0.6",
     "Microsoft.AspNetCore.Mvc.TagHelpers": "1.0.6",
-    "Microsoft.AspNetCore.DataProtection.Extensions": "1.0.4",
-    "Microsoft.AspNetCore.Diagnostics": "1.0.4",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.4",
-    "Microsoft.AspNetCore.Identity": "1.0.4",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.4",
-    "Microsoft.AspNetCore.Authentication.Cookies": "1.0.4",
-    "Microsoft.AspNetCore.Authentication.Facebook": "1.0.4",
-    "Microsoft.AspNetCore.Authentication.Google": "1.0.4",
-    "Microsoft.AspNetCore.Authentication.Twitter": "1.0.4",
-    "Microsoft.AspNetCore.Authorization": "1.0.4",
-    "Microsoft.AspNetCore.StaticFiles": "1.0.4",
-    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.4",
-    "Microsoft.AspNetCore.Server.Kestrel": "1.0.5",
+    "Microsoft.AspNetCore.DataProtection.Extensions": "1.0.5",
+    "Microsoft.AspNetCore.Diagnostics": "1.0.5",
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.5",
+    "Microsoft.AspNetCore.Identity": "1.0.5",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.5",
+    "Microsoft.AspNetCore.Authentication.Cookies": "1.0.5",
+    "Microsoft.AspNetCore.Authentication.Facebook": "1.0.5",
+    "Microsoft.AspNetCore.Authentication.Google": "1.0.5",
+    "Microsoft.AspNetCore.Authentication.Twitter": "1.0.5",
+    "Microsoft.AspNetCore.Authorization": "1.0.5",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.5",
+    "Microsoft.AspNetCore.Server.IISIntegration": "1.0.5",
+    "Microsoft.AspNetCore.Server.Kestrel": "1.0.6",
     "Microsoft.EntityFrameworkCore.Tools": {
       "version": "1.0.0-preview4-final",
       "type": "build"
     },
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.5",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.0.6",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.2",
     "Microsoft.Extensions.Configuration.Json": "1.0.2",
     "Microsoft.Extensions.Configuration.UserSecrets": "1.0.2",
@@ -40,7 +40,7 @@
     "netcoreapp1.0": {
       "dependencies": {
         "Microsoft.NETCore.App": {
-          "version": "1.0.7",
+          "version": "1.0.8-servicing-005009-00",
           "type": "platform"
         }
       }
