--- a/samples/IdentitySample.Mvc/project.json
+++ b/samples/IdentitySample.Mvc/project.json
@@ -11,16 +11,16 @@
     "Microsoft.AspNetCore.Authentication.Twitter": "1.1.3",
     "Microsoft.AspNetCore.Authorization": "1.1.3",
     "Microsoft.AspNetCore.DataProtection.Extensions": "1.1.3",
-    "Microsoft.AspNetCore.Diagnostics": "1.1.3",
-    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.3",
-    "Microsoft.AspNetCore.Identity": "1.1.3",
-    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.3",
+    "Microsoft.AspNetCore.Diagnostics": "1.1.4",
+    "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.4",
+    "Microsoft.AspNetCore.Identity": "1.1.4",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.4",
     "Microsoft.AspNetCore.Mvc": "1.1.5",
     "Microsoft.AspNetCore.Mvc.TagHelpers": "1.1.5",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.3",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.3",
     "Microsoft.AspNetCore.StaticFiles": "1.1.3",
-    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.3",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.4",
     "Microsoft.EntityFrameworkCore.Tools": {
       "version": "1.1.0-preview4-final",
       "type": "build"
@@ -40,7 +40,7 @@
     "netcoreapp1.1": {
       "dependencies": {
         "Microsoft.NETCore.App": {
-          "version": "1.1.4",
+          "version": "1.1.5-servicing-001651-00",
           "type": "platform"
         }
       }
