--- a/samples/IdentitySample.DefaultUI/IdentitySample.DefaultUI.csproj
+++ b/samples/IdentitySample.DefaultUI/IdentitySample.DefaultUI.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.1.0-preview1-27644" />
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="$(MicrosoftEntityFrameworkCoreToolsDotNetPackageVersion)" />
   </ItemGroup>
 
 </Project>
