--- a/test/EF.Test/Microsoft.AspNetCore.Identity.EntityFrameworkCore.Test.csproj
+++ b/test/EF.Test/Microsoft.AspNetCore.Identity.EntityFrameworkCore.Test.csproj
@@ -6,16 +6,13 @@
 
   <ItemGroup>
     <Compile Include="..\Shared\*.cs" />
-    <Content Include="config.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
+    <Content Include="config.json" CopyToOutputDirectory="PreserveNewest" CopyToPublishDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Service\Microsoft.AspNetCore.Identity.Service.csproj" />
-    <ProjectReference Include="..\..\src\Service.EntityFrameworkCore\Microsoft.AspNetCore.Identity.Service.EntityFrameworkCore.csproj" />
-    <ProjectReference Include="..\..\src\Service.Specification.Tests\Microsoft.AspNetCore.Identity.Service.Specification.Tests.csproj" />
+    <ProjectReference Include="..\..\src\Identity\Microsoft.AspNetCore.Identity.csproj" />
+    <ProjectReference Include="..\..\src\EF\Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\src\Specification.Tests\Microsoft.AspNetCore.Identity.Specification.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
