--- a/samples/IdentitySample.DefaultUI/IdentitySample.DefaultUI.csproj
+++ b/samples/IdentitySample.DefaultUI/IdentitySample.DefaultUI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\EntityFrameworkCore\Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\src\EF\Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\src\UI\Microsoft.AspNetCore.Identity.UI.csproj" />
   </ItemGroup>
 
