--- a/test/Service.EF.InMemory.Test/Microsoft.AspNetCore.Identity.Service.EntityFrameworkCore.InMemory.Test.csproj
+++ b/test/Service.EF.InMemory.Test/Microsoft.AspNetCore.Identity.Service.EntityFrameworkCore.InMemory.Test.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\EntityFrameworkCore\Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\..\src\EF\Microsoft.AspNetCore.Identity.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\src\Service\Microsoft.AspNetCore.Identity.Service.csproj" />
     <ProjectReference Include="..\..\src\Service.EF\Microsoft.AspNetCore.Identity.Service.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\src\Service.Specification.Tests\Microsoft.AspNetCore.Identity.Service.Specification.Tests.csproj" />
