Use ApplicationPartFactory and Sdk features in IdentityUI

--- a/src/UI/Microsoft.AspNetCore.Identity.UI.csproj
+++ b/src/UI/Microsoft.AspNetCore.Identity.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   
   <PropertyGroup>
     <Description>ASP.NET Core Identity UI is the default Razor Pages built-in UI for the ASP.NET Core Identity framework.</Description>
@@ -8,9 +8,7 @@
     <PackageTags>aspnetcore;identity;membership;razorpages</PackageTags>
     <EnableApiCheck>false</EnableApiCheck>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
-    <RazorCompileOnBuild>true</RazorCompileOnBuild>
-    <PrecompiledAssemblyTitle Condition=" '$(PrecompiledAssemblyTitle)' == '' ">$(RazorTargetName).dll</PrecompiledAssemblyTitle>
-    <PreserveCompilationContext>false</PreserveCompilationContext>
+    <EnableDefaultCompiledViewAssemblyLoadBehavior>false</EnableDefaultCompiledViewAssemblyLoadBehavior>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +23,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="$(MicrosoftAspNetCoreMvcPackageVersion)" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="$(MicrosoftExtensionsFileProvidersEmbeddedPackageVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="$(MicrosoftAspNetCoreStaticFilesPackageVersion)" />
+    <PackageReference Include="Microsoft.NET.Sdk.Razor" Version="$(MicrosoftNETSdkRazorPackageVersion)" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,16 +31,10 @@
     <ProjectReference Include="..\Stores\Microsoft.Extensions.Identity.Stores.csproj" />
   </ItemGroup>
   
-  <Import Project="$(MSBuildThisFileDirectory)Microsoft.AspNetCore.Identity.UI.props" />
-
   <ItemGroup>
-    <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
-      <_parameter1>Microsoft.AspNetCore.Mvc.AdditionalReference</_parameter1>
-      <_parameter2>$(RazorTargetName).dll,false</_parameter2>
-    </AssemblyAttribute>
+    <RazorCompile Include="$(GeneratedCommitHashAttributeFile)" />
+    <RazorCompile Include="$(GeneratedInternalAspNetCoreAttributeFile)" />
   </ItemGroup>
-  
-  <Import Project="$(MSBuildThisFileDirectory)Microsoft.AspNetCore.Identity.UI.targets" />
 
   <Target Name="VerifyBuildOutputs" AfterTargets="Build">
     <PropertyGroup>
